# prettiprint

./: .dockerignore  .gitignore  .gitlint  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  changelog.sh  commit-setup.sh  dev-requirements.txt  pre-commit-config.yaml  pyproject.toml  requirements.txt
demo/: demo.py
src/prettiprint/: format.sh  prettiprint.py  pylint.sh
src/prettiprint/templates/: changelog.j2
